vendor/proc-macro-error-1.0.4/tests/ui/explicit_span_range.stderr
error: explicit SpanRange
 --> $DIR/explicit_span_range.rs:4:22
  |
4 | explicit_span_range!(one, two, three, four);
  |                      ^^^^^^^^^^^^^^^
