vendor/proc-macro-error-1.0.4/tests/ui/explicit_span_range.rs
extern crate test_crate;
use test_crate::*;

explicit_span_range!(one, two, three, four);

fn main() {}
